let the menu on mobile be fixed to the screen

--- a/src/styles/Navbar/Navbar.module.css
+++ b/src/styles/Navbar/Navbar.module.css
@@ -78,12 +78,13 @@
 }
 
 .mainNavLstOpened {
-  position: absolute;
+  position: fixed;
   top: 0;
   background-color: black;
   z-index: 1;
   border-radius: 0.4rem;
-  background-color: rgb(75, 75, 75);
+  /* background-color: rgb(75, 75, 75); */
+  background-color: blue;
   transform: translateX(0);
   transition: transform 0.3s ease;
   padding: 0.5rem;
